--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -1,9 +1,9 @@
-.projects-container {
+.intro-container {
   padding: 12em;
   color: black;
   background-color: #eae7dc;
 }
 
-.projects-header {
+.intro-header {
   color: #ee4e34;
 }
