--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;400;500&family=IBM+Plex+Mono:wght@300;400;500&family=Inconsolata:wght@300;400;500&display=swap");
+
+body {
+  /* font-family: "Chivo Mono", monospace; */
+  font-family: "IBM Plex Mono", monospace;
+  /* font-family: "Inconsolata", monospace; */
+}
+
 .App {
   text-align: center;
 }
