--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -1,5 +1,5 @@
 .link-container {
-  padding: 2em;
+  padding: 1.4em;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -7,6 +7,7 @@
   position: sticky;
   top: 0;
   z-index: 100;
+  font-size: 0.8em;
 }
 
 .name {
