--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -1,12 +1,29 @@
+.intro-main-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 .intro-container {
   color: black;
   background-color: #eae7dc;
-  height: 100vh;
-  max-width: 100%;
+  height: 50vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: -60px;
+}
+
+.intro-container2 {
+  color: black;
+  background-color: #eae7dc;
+  height: 50vh;
+  width: 100%;
+  padding-top: -20px;
 }
 
 .intro-header {
@@ -20,10 +37,12 @@
   border-radius: 5px;
   box-shadow: rgba(177, 126, 126, 0.24) 0px 3px 8px;
   font-size: 0.9em;
+  transition: transform 1s;
 }
 
 .see-projects:hover {
   cursor: pointer;
+  transform: translate(0, -8px);
 }
 
 .intro-content {
