--- a/src/components/NavBar.css
+++ b/src/components/NavBar.css
@@ -33,3 +33,29 @@
 .link:hover {
   color: #ee4e34;
 }
+
+.hamburger-button {
+  position: absolute;
+  top: 30%;
+  right: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  z-index: 10;
+}
+
+.hamburger-div {
+  width: 2rem;
+  height: 0.25rem;
+  background: grey;
+  border-radius: 10px;
+  transition: all 0.3s linear;
+  position: relative;
+  transform-origin: 1px;
+}
