--- a/src/components/Burger.css
+++ b/src/components/Burger.css
@@ -14,7 +14,7 @@
   z-index: 10;
 }
 
-.hamburger-div {
+.hamburger-div-style1 {
   width: 2rem;
   height: 0.25rem;
   background: grey;
@@ -22,4 +22,27 @@
   transition: all 0.3s linear;
   position: relative;
   transform-origin: 1px;
+}
+
+.hamburger-div-style2 {
+  width: 2rem;
+  height: 0.25rem;
+  background: grey;
+  border-radius: 10px;
+  transition: all 0.3s linear;
+  position: relative;
+  transform-origin: 1px;
+}
+
+.hamburger-div-style2:first-child {
+  transform: rotate(45deg);
+}
+
+.hamburger-div-style2:nth-child(2) {
+  opacity: 0;
+  transform: translate(0);
+}
+
+.hamburger-div-style2:nth-child(3) {
+  transform: rotate(-45deg);
 }
