--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -12,3 +12,64 @@
 .contact-header {
   color: #ee4e34;
 }
+
+.form-container {
+  background-color: #eae7dc;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px #ededed solid;
+  border-radius: 2px;
+  margin: 20px 15%;
+  padding: 40px 0;
+}
+
+.form-field {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  margin-bottom: 15px;
+  font-size: 0.7em;
+}
+
+.form-field textarea {
+  border: 1px #ededed solid;
+  border-radius: 5px;
+  width: 100%;
+  height: 30px;
+  padding-left: 12px;
+  padding-top: 18px;
+  resize: none;
+}
+
+.message textarea {
+  border: 1px #ededed solid;
+  border-radius: 5px;
+  width: 100%;
+  height: 150px;
+  padding-left: 12px;
+  padding-top: 18px;
+  resize: none;
+}
+
+label {
+  margin-bottom: 8px;
+}
+
+input {
+  padding: 12px 35px;
+  margin-top: 20px;
+  border: none;
+  color: white;
+  border-radius: 5px;
+  background-color: #ee4e34;
+  box-shadow: rgba(177, 126, 126, 0.24) 0px 3px 8px;
+  transition: transform 1s;
+}
+
+input:hover {
+  cursor: pointer;
+  transform: translate(0, -4px);
+}
