learning more about responsive sizing, using max-width to fix some css bugs

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,8 @@ body {
   font-size: calc(10px + 2vmin);
   color: white;
   box-sizing: border-box;
-  overflow: hidden;
+  /* another option for overflow: hidden */
+  contain: paint;
 }
 
 .App-link {
