--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -1,4 +1,5 @@
 .intro-main-container {
+  background-color: #eae7dc;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -11,6 +12,7 @@
   background-color: #eae7dc;
   height: 50vh;
   width: 100%;
+  max-width: 800px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,7 +31,7 @@
 
 .intro-img {
   align-self: center;
-  padding-bottom: 40px;
+  padding-bottom: 120px;
 }
 
 .intro-header {
@@ -72,6 +74,10 @@
   .intro-container2 {
     height: 50vh;
     width: 100%;
+  }
+
+  .intro-img {
+    padding-bottom: 20px;
   }
 }
 
