played around with adding a wavey background using svg

--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -24,6 +24,7 @@
   background-color: #eae7dc;
   height: 50vh;
   width: 100%;
+  max-width: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
