--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -8,6 +8,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 25px;
 }
 
 .contact-container p {
@@ -67,7 +68,9 @@ label {
   margin-bottom: 8px;
 }
 
-input {
+button {
+  font-size: 0.65em;
+  font-weight: 600;
   padding: 12px 35px;
   margin-top: 20px;
   border: none;
