added some images

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -7,6 +7,11 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  position: RELATIVE;
+}
+
+.about-header-container {
+  position: relative;
 }
 
 .about-header {
@@ -15,4 +20,26 @@
 
 .about-svg {
   background-color: #eae7dc;
+}
+
+.about-img {
+  position: absolute;
+  top: 0%;
+  left: -5%;
+  /* display: inline-block; */
+  width: 30%;
+  max-width: 300px;
+  height: auto;
+  transform: rotate(30deg) scaleX(-1);
+}
+
+.about-img2 {
+  position: absolute;
+  top: -3%;
+  right: -5%;
+  /* display: inline-block; */
+  width: 25%;
+  max-width: 300px;
+  height: auto;
+  transform: rotate(320deg) scaleX(-1);
 }
