added css animation to the menu/hamburger

--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   position: relative;
 }
 
@@ -28,7 +29,7 @@ svg {
   right: -5%;
   /* display: inline-block; */
   width: 25%;
-  max-width: 250px;
+  max-width: 150px;
   height: auto;
   transform: rotate(320deg) scaleX(-1);
 }
@@ -50,12 +51,15 @@ i {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  padding: 25px 15px;
+  padding: 25px 0;
+  width: 85%;
+  max-width: 900px;
 }
 
 /* this allows 4 items per row */
 .icons-child {
   flex: 1 0 21%;
+  padding-bottom: 20px;
 }
 
 .icon-name {
