--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -6,6 +6,7 @@
   height: 60vh;
   text-align: left;
   padding: 2rem;
+  border-radius: 10px;
   position: absolute;
   top: 0;
   right: 0;
@@ -22,6 +23,7 @@
   height: 60vh;
   text-align: left;
   padding: 2rem;
+  border-radius: 10px;
   position: absolute;
   top: 0;
   right: 0;
@@ -37,5 +39,37 @@
   letter-spacing: 0.5rem;
   color: black;
   text-decoration: none;
-  transition: color 0.3s linear;
+  transform: translateX(200%);
+  opacity: 0;
+}
+
+.hashlink:hover {
+  color: #eae7dc;
+}
+
+.hashlinkstyle2a {
+  transform: translateX(0%);
+  opacity: 1;
+  transition: transform 0.5s ease-in-out 0.3s, opacity 1.1s linear;
+}
+
+.hashlinkstyle2b {
+  transform: translateX(0%);
+  opacity: 1;
+  transition: transform 0.5s ease-in-out 0.5s, opacity 1.1s ease-in-out 0.2s;
+}
+.hashlinkstyle2c {
+  transform: translateX(0%);
+  opacity: 1;
+  transition: transform 0.5s ease-in-out 0.7s, opacity 1.1s ease-in-out 0.4s;
+}
+.hashlinkstyle2d {
+  transform: translateX(0%);
+  opacity: 1;
+  transition: transform 0.5s ease-in-out 0.9s, opacity 1.1s ease-in-out 0.6s;
+}
+.hashlinkstyle2e {
+  transform: translateX(0%);
+  opacity: 1;
+  transition: transform 0.5s ease-in-out 1.1s, opacity 1.1s ease-in-out 0.8s;
 }
