--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -39,7 +39,7 @@
   letter-spacing: 0.5rem;
   color: black;
   text-decoration: none;
-  transform: translateX(200%);
+  transform: translateY(0%);
   opacity: 0;
 }
 
@@ -48,28 +48,31 @@
 }
 
 .hashlinkstyle2a {
-  transform: translateX(0%);
+  transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.5s ease-in-out 0.3s, opacity 1.1s linear;
+  transition: transform 0.6s linear, opacity 1.2s linear;
 }
 
 .hashlinkstyle2b {
-  transform: translateX(0%);
+  transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.5s ease-in-out 0.5s, opacity 1.1s ease-in-out 0.2s;
+  transition: transform 0.6s linear 0.2s, opacity 1.2s linear 0.2s;
 }
+
 .hashlinkstyle2c {
-  transform: translateX(0%);
+  transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.5s ease-in-out 0.7s, opacity 1.1s ease-in-out 0.4s;
+  transition: transform 0.6s linear 0.4s, opacity 1.2s linear 0.4s;
 }
+
 .hashlinkstyle2d {
-  transform: translateX(0%);
+  transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.5s ease-in-out 0.9s, opacity 1.1s ease-in-out 0.6s;
+  transition: transform 0.6s linear 0.6s, opacity 1.2s linear 0.6s;
 }
+
 .hashlinkstyle2e {
-  transform: translateX(0%);
+  transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.5s ease-in-out 1.1s, opacity 1.1s ease-in-out 0.8s;
+  transition: transform 0.6s linear 0.8s, opacity 1.2s linear 0.8s;
 }
