--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -25,13 +25,24 @@ svg {
 
 .skills-img {
   position: absolute;
-  bottom: -3%;
+  bottom: 0%;
   right: -5%;
   /* display: inline-block; */
   width: 25%;
   max-width: 150px;
   height: auto;
   transform: rotate(320deg) scaleX(-1);
+}
+
+.skills-img2 {
+  position: absolute;
+  top: -6%;
+  left: 3%;
+  /* display: inline-block; */
+  width: 25%;
+  max-width: 150px;
+  height: auto;
+  transform: rotate(45deg) scaleX(-1);
 }
 
 .skills-main-header {
