--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -9,6 +9,7 @@
   justify-content: center;
   align-items: center;
   padding-top: 25px;
+  position: relative;
 }
 
 .contact-container p {
@@ -93,4 +94,15 @@ label {
 
 .contact-svg {
   background-color: #eae7dc;
+}
+
+.contact-img {
+  position: absolute;
+  top: -6%;
+  left: 1%;
+  /* display: inline-block; */
+  width: 25%;
+  max-width: 150px;
+  height: auto;
+  transform: rotate(45deg) scaleX(-1);
 }
