--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -50,29 +50,29 @@
 .hashlinkstyle2a {
   transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.6s linear, opacity 1.2s linear;
+  transition: transform 0.6s ease-out, opacity 1.2s ease-out;
 }
 
 .hashlinkstyle2b {
   transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.6s linear 0.2s, opacity 1.2s linear 0.2s;
+  transition: transform 0.9s ease-out 0.2s, opacity 1.2s ease-out 0.2s;
 }
 
 .hashlinkstyle2c {
   transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.6s linear 0.4s, opacity 1.2s linear 0.4s;
+  transition: transform 0.9s ease-out 0.4s, opacity 1.2s ease-out 0.4s;
 }
 
 .hashlinkstyle2d {
   transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.6s linear 0.6s, opacity 1.2s linear 0.6s;
+  transition: transform 0.9s ease-out 0.6s, opacity 1.2s ease-out 0.6s;
 }
 
 .hashlinkstyle2e {
   transform: translateY(8%);
   opacity: 1;
-  transition: transform 0.6s linear 0.8s, opacity 1.2s linear 0.8s;
+  transition: transform 0.9s ease-out 0.8s, opacity 1.2s ease-out 0.8s;
 }
